tests/errors/semantic/non_blocking/UNKNOWN_IMPORT2.py
# Module abc is not currently supported by pyccel
# pylint: disable=missing-function-docstring, missing-module-docstring, unused-import
import abc
